--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header a:hover{
 }
 main{
     background-color: rgba(0, 0, 0, 0.772);
-    width: 800px;
+    max-width: 800px;
     margin: auto;
     padding: 15px;
     border-radius: 10px 0px;
@@ -62,7 +62,7 @@ main p{
 aside{
     background-color: var(--cor-musica);
     color: var(--cor-fundo);
-    width: 800px;
+    max-width: 800px;
     margin: auto;
     margin-top: 25px;
     padding: 20px;
@@ -74,7 +74,12 @@ aside h2{
     margin-bottom: 7px;
 }
 aside p{
-    text-indent: 5px;
+    text-indent: 15px;
+    text-align: justify;
+}
+#escuro{
+    text-align: center;
+    font: normal bolder 3em var(--font-destaque);
 }
 #varg{
     display: flex;
@@ -96,4 +101,13 @@ footer a{
 footer a:hover{
     text-decoration: underline;
     font-weight: bold;
+}
+
+@media (max-width: 800px){
+    main p{
+        padding-left: 0px;
+    }
+    footer p{
+        font: normal normal 13px Arial, sans-serif;
+    }
 }
